HelloUltraviolet/Fixtures/RejectedSource/Parallelism/BarrierDivergence/Expected.uv
//! Expected diagnostic metadata for the BarrierDivergence rejected-source specimen.

expectedDiagnostic("E-CON-0158", "rule.20.Barrier-Divergence-Err")
